--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ elevenlabs = "^1.3.1"
 streamlit = "^1.36.0"
 srt-equalizer = "^0.1.9"
 termcolor = "^2.4.0"
+opencv-python = "^4.10.0.84"
 
 
 [build-system]
