--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 loguru = "^0.7.2"
-moviepy = "^1.0.3"
+moviepy = {git = "https://github.com/Zulko/moviepy.git"}
 aiohttp = "^3.9.5"
 pydantic = "^2.8.2"
 elevenlabs = "^1.3.1"
@@ -17,6 +17,10 @@ streamlit = "^1.36.0"
 srt-equalizer = "^0.1.9"
 termcolor = "^2.4.0"
 opencv-python = "^4.10.0.84"
+pytest-asyncio = "^0.23.8"
+pytest = "^8.3.2"
+pytest-mock = "^3.14.0"
+pytest-env = "^1.1.3"
 
 
 [build-system]
