--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ pytest-asyncio = "^0.23.8"
 pytest = "^8.3.2"
 pytest-mock = "^3.14.0"
 pytest-env = "^1.1.3"
+langchain-core = "^0.2.28"
+langchain = "^0.2.12"
+langchain-openai = "^0.1.20"
+python-dotenv = "^1.0.1"
+langchain-community = "^0.2.11"
 
 
 [build-system]
