--- a/fly.toml
+++ b/fly.toml
@@ -9,14 +9,14 @@ primary_region = 'lhr'
 [build]
 
 [http_service]
-  internal_port = 8501
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 8501
+force_https = true
+auto_stop_machines = "off"
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
 
 [[vm]]
-  memory = '512mb'
-  cpu_kind = 'shared'
-  cpus = 1
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 1
