--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ langchain = "^0.2.12"
 langchain-openai = "^0.1.20"
 python-dotenv = "^1.0.1"
 langchain-community = "^0.2.11"
+pysrt = "^1.1.2"
+word2number = "^1.1"
 
 
 [build-system]
