♐ added readme and example videos

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "cwd": "${workspaceFolder}",
             "args": [
                 "run",
-                "main.py"
+                "reelsmaker.py"
             ]
         }
     ]
